[package]
name = "liburing-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Charalampos Mitrodimas <charmitro@posteo.net>"]
license = "MIT"
description = "Rust bindings and idiomatic wrapper for liburing"
keywords = ["io_uring", "async", "io", "linux", "liburing"]
categories = ["asynchronous", "os::unix-apis"]
repository = "https://github.com/charmitro/liburing-rs"
readme = "README.rst"
links = "uring"

# System dependencies (installed via package manager):
# - liburing >= 2.12 (liburing.so)

[dependencies]
libc = "0.2"
bitflags = "2.6"
tokio = { version = "1.0", features = ["net", "io-util", "rt"], optional = true }
async-std = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
async-std = { version = "1.0", features = ["attributes"] }

[features]
default = []
async-tokio = ["tokio", "futures"]
async-async-std = ["async-std", "futures"]

[[example]]
name = "async_nop_tokio"
required-features = ["async-tokio"]

[[example]]
name = "async_nop_async_std"
required-features = ["async-async-std"]

[[example]]
name = "async_poll_bench"
required-features = ["async-tokio"]

[[example]]
name = "async_poll_bench_async_std"
required-features = ["async-async-std"]
